:recycle: ライセンスの場所を変更。言い回しを修正

--- a/docs/LICENSE.adoc
+++ b/docs/LICENSE.adoc
@@ -1,7 +1,7 @@
 = 利用規約
 // 作者情報
 :author: 次郎 (jiro)
-:revnumber: 1.0
+:revnumber: 1.1
 :revdate: {docdate}
 :homepage: https://jiroron666.hatenablog.com/archive
 // ドキュメント情報
@@ -18,14 +18,14 @@
 
 == 規約内容
 
+配布しているイラストの著作権は次郎(以下、私)が有しています。
+私が死亡して50年経過するまで決して放棄することはありません。
+
 配布しているイラスト素材はすべてフリー素材であり、
 利用するイラストの種類や数に関わらずすべて無償で利用できます。
 
 配布している素材を利用したことで発生した問題に対して、
 私は一切の責任を負いません。
-
-著作権は私が有しています。
-私が死亡して50年経過するまで決して放棄することはありません。
 
 利用規約を事前連絡なしに変更する場合があります。
 その場合は最新の規約が適用されるものとします。
