:memo: 書式ととのえ

--- a/LICENSE.adoc
+++ b/LICENSE.adoc
@@ -11,19 +11,19 @@
 本ドキュメントは配布のイラストの利用規約について記載してあります。
 お手数おかけいたしますが、ご一読のほどよろしくお願いいたします。
 
-== 作者情報
+== 規約情報
 
-.作者情報
+.規約情報
 [options="header"]
-|=============================================================
-|項目      |値
-|名前      |次郎 (jiro)
-|規約作成日|2016/01/24
-|規約更新日|2019/05/23
-|版        |1.2
-|Twitter   |https://twitter.com/jiro_saburomaru[@jiro_saburomaru]
-|ブログ    |https://jiroron666.hatenablog.com/archive[次ログ]
-|=============================================================
+|==================================================================
+|項目        |値
+|作者名      |次郎 (jiro)
+|規約作成日  |2016/01/24
+|規約更新日  |2019/05/23
+|版          |1.2
+|作者Twitter |https://twitter.com/jiro_saburomaru[@jiro_saburomaru]
+|作者ブログ  |https://jiroron666.hatenablog.com/archive[次ログ]
+|==================================================================
 
 == 規約内容
 
